# azure_data_engineering

./: Makefile  README.md  pyproject.toml  run.sh  testing.ipynb
data_engineering_cloud/git_data_source_olist/: gather_data.py
