[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
requires-python = ">= 3.10"
name = "data_engineering_cloud"
authors = [
    {name = "Matthew Lozinski", email = "lozinskimatthew0@gmail.com"},
]
description = "My package description"
readme = "README.md"

dependencies = [
    "kagglehub"
]
